[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
enigo = "0.2.0"
wasm-bindgen = "0.2.74"
# rdev = "0.5.3"
